star-wars-blog/src/styles/Home.css
.div-welcome {
    background: url(../assets/images/background05.webp) no-repeat center center;
    /* background-size: 100%, 100%; */
    background-position: 100%, 100%;
    height: 600px;
    padding-top: 100px;
    cursor: default;
}

.welcome-message {
    color: yellow;
    text-align: justify;
    width: 45%;
    font-size: 20px;
    line-height: 45px;
    margin-left: 50px;
}

.transition1 {
    height: 50px;
    width: 100%;
    background-color: black;
}

.div-categories {
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background: url(../assets/images/background02.webp);
    background-size: 100%, 100%;
    background-position: 50%, 50%;
}

.transition2 {
    height: 40px;
    width: 100%;
    background: linear-gradient(black, transparent);
}

.div-categories h2 {
    color: white;
    font-size: 34px;
    margin: 0;
    cursor: default;
}

.card-list {
    min-height: 1000px;
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}

